incorporate some old changes from the old server that allows the correct showing of pages threaded pages on Safari on Mac
git-svn-id: https://svn1.hostlocal.com/cpan-forum/trunk@407 e8c0bd59-b5ed-0310-baec-9ce68b663d6d

--- a/www/style.css
+++ b/www/style.css
@@ -45,17 +45,20 @@ BODY {
 .perlads li {
     display: inline;
     padding: 4px;
+    background-color: #EEEE00;
+    border-style: solid;
+    border-width: 1px;
 }
 
 .message {
 	color: #000000;
 }
 TABLE.message {
-	border-width: 3px;
+	border-width: 3;
 	border-style: groove;
-	/*border-collapse: no; */
+	border-collapse: no;
 	table-layout: fixed;
-	/*align: */
+	align: 
 	width: 90%;
 }
 .message_row_head {
@@ -239,7 +242,7 @@ INPUT {
 .text {
 	background: #eeeeee;
 /*	white-space: pre;*/
-	/*table-width: 80%;*/
+	table-width: 80%;
 }
 .code {
 	background: #dddddd;
